<resources>
    <string name="fr_HT" translatable="false">Kreyòl ayisyen</string>
    <string name="pt_BR" translatable="false">Português do Brasil</string>
    <string name="zh_CN" translatable="false">简体中文</string>
    <string name="zh_TW" translatable="false">繁體中文</string>
    <string name="app_name" translatable="false">DarkMesh</string>
    <string name="sample_distance" translatable="false">2.13 km</string>
    <string name="some_username" translatable="false">SKH</string>
    <string name="test_devname1" translatable="false">Meshtastic_ac23</string>
    <string name="test_devname2" translatable="false">Meshtastic_1267</string>
    <string name="sample_coords" translatable="false">55.332244 34.442211</string>
    <string name="sample_message" translatable="false">hey I found the cache, it is over here next to the big tiger. I\'m kinda scared.</string>
    <string name="unknown_node_short_name" translatable="false">\???</string>
    <string name="node_filter_placeholder">Filter</string>
    <string name="desc_node_filter_clear">clear node filter</string>
    <string name="node_filter_include_unknown">Include unknown</string>
    <string name="node_filter_show_details">Show details</string>
    <string name="node_sort_alpha">A-Z</string>
    <string name="node_sort_channel">Channel</string>
    <string name="node_sort_distance">Distance</string>
    <string name="node_sort_hops_away">Hops away</string>
    <string name="node_sort_last_heard">Last heard</string>
    <string name="node_sort_via_mqtt">via MQTT</string>
    <string name="node_sort_favorite">By Favorite</string>
    <string name="node_sort_infrastructure" translatable="false">By Infrastructure</string>
    <string name="unmessagable" translatable="false">Unmessageable</string>
    <string name="node_sort_online" translatable="false">Online Only</string>
    <string name="unrecognized">Unrecognized</string>
    <string name="message_status_enroute">Waiting to be acknowledged</string>
    <string name="message_status_queued">Queued for sending</string>
    <string name="routing_error_none">Acknowledged</string>
    <string name="routing_error_no_route">No route</string>
    <string name="routing_error_got_nak">Received a negative acknowledgment</string>
    <string name="routing_error_timeout">Timeout</string>
    <string name="routing_error_no_interface">No Interface</string>
    <string name="routing_error_max_retransmit">Max Retransmission Reached</string>
    <string name="routing_error_no_channel">No Channel</string>
    <string name="routing_error_too_large">Packet too large</string>
    <string name="routing_error_no_response">No response</string>
    <string name="routing_error_bad_request">Bad Request</string>
    <string name="routing_error_duty_cycle_limit">Regional Duty Cycle Limit Reached</string>
    <string name="routing_error_not_authorized">Not Authorized</string>
    <string name="routing_error_pki_failed">Encrypted Send Failed</string>
    <string name="routing_error_pki_unknown_pubkey">Unknown Public Key</string>
    <string name="routing_error_admin_bad_session_key">Bad session key</string>
    <string name="routing_error_admin_public_key_unauthorized">Public Key unauthorized</string>
    <string name="role_client">App connected or standalone messaging device.</string>
    <string name="role_client_mute">Device that does not forward packets from other devices.</string>
    <string name="role_client_base">Treats packets from or to favorited nodes as ROUTER, and all other packets as CLIENT.</string>
    <string name="role_router">Infrastructure node for extending network coverage by relaying messages. Visible in nodes list.</string>
    <string name="role_router_client">Combination of both ROUTER and CLIENT. Not for mobile devices.</string>
    <string name="role_repeater">Infrastructure node for extending network coverage by relaying messages with minimal overhead. Not visible in nodes list.</string>
    <string name="role_tracker">Broadcasts GPS position packets as priority.</string>
    <string name="role_sensor">Broadcasts telemetry packets as priority.</string>
    <string name="role_tak">Optimized for ATAK system communication, reduces routine broadcasts.</string>
    <string name="role_client_hidden">Device that only broadcasts as needed for stealth or power savings.</string>
    <string name="role_lost_and_found">Broadcasts location as message to default channel regularly for to assist with device recovery.</string>
    <string name="role_tak_tracker">Enables automatic TAK PLI broadcasts and reduces routine broadcasts.</string>
    <string name="role_router_late">Infrastructure node that always rebroadcasts packets once but only after all other modes, ensuring additional coverage for local clusters. Visible in nodes list.</string>
    <string name="rebroadcast_mode_all">Rebroadcast any observed message, if it was on our private channel or from another mesh with the same lora parameters.</string>
    <string name="rebroadcast_mode_all_skip_decoding">Same as behavior as ALL but skips packet decoding and simply rebroadcasts them. Only available in Repeater role. Setting this on any other roles will result in ALL behavior.</string>
    <string name="rebroadcast_mode_local_only">Ignores observed messages from foreign meshes that are open or those which it cannot decrypt. Only rebroadcasts message on the nodes local primary / secondary channels.</string>
    <string name="rebroadcast_mode_known_only">Ignores observed messages from foreign meshes like LOCAL ONLY, but takes it step further by also ignoring messages from nodes not already in the node\'s known list.</string>
    <string name="rebroadcast_mode_none">Only permitted for SENSOR, TRACKER and TAK_TRACKER roles, this will inhibit all rebroadcasts, not unlike CLIENT_MUTE role.</string>
    <string name="rebroadcast_mode_core_portnums_only">Ignores packets from non-standard portnums such as: TAK, RangeTest, PaxCounter, etc. Only rebroadcasts packets with standard portnums: NodeInfo, Text, Position, Telemetry, and Routing.</string>
    <string name="config_device_doubleTapAsButtonPress_summary">Treat double tap on supported accelerometers as a user button press.</string>
    <string name="config_device_disableTripleClick_summary">Disables the triple-press of user button to enable or disable GPS.</string>
    <string name="config_device_ledHeartbeatDisabled_summary">Controls the blinking LED on the device. For most devices this will control one of the up to 4 LEDs, the charger and GPS LEDs are not controllable.</string>
    <string name="config_device_transmitOverLora_summary">Whether in addition to sending it to MQTT and the PhoneAPI, our NeighborInfo should be transmitted over LoRa. Not available on a channel with default key and name.</string>
    <string name="config_security_public_key">Public Key</string>
    <string name="config_security_private_key">Private Key</string>
    <string name="elevation_suffix" translatable="false">MSL</string>
    <string name="channel_air_util" translatable="false">ChUtil %.1f%% AirUtilTX %.1f%%</string>
    <string name="channel_name">Channel Name</string>
    <string name="channel_options">Channel options</string>
    <string name="qr_code">QR code</string>
    <string name="unset">Unset</string>
    <string name="connection_status">Connection status</string>
    <string name="application_icon">application icon</string>
    <string name="unknown_username">Unknown Username</string>
    <string name="send">Send</string>
    <string name="send_text">Send Text</string>
    <string name="warning_not_paired">You haven\'t yet paired a DarkMesh compatible radio with this phone. Please pair a device and set your username.\n\nThis open-source application is in development, if you find problems please post on our forum: https://github.com/orgs/meshtastic/discussions.\n\nFor more information see our web page - www.meshtastic.org.</string>
    <string name="you">You</string>
    <string name="your_name">Your Name</string>
    <string name="analytics_okay">Anonymous usage statistics and crash reports.</string>
    <string name="looking_for_meshtastic_devices">Looking for DarkMesh devices…</string>
    <string name="starting_pairing">Starting pairing</string>
    <string name="url_for_join">A URL for joining a DarkMesh mesh</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="change_channel">Change channel</string>
    <string name="are_you_sure_channel">Are you sure you want to change the channel? All communication with other nodes will stop until you share the new channel settings.</string>
    <string name="new_channel_rcvd">New Channel URL received</string>
    <string name="permission_missing">DarkMesh needs location permission and location must be turned on to find new devices via Bluetooth. You can turn it off again afterwards.</string>
    <string name="report_bug">Report Bug</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="report_bug_text">Are you sure you want to report a bug? After reporting, please post in https://github.com/orgs/meshtastic/discussions so we can match up the report with what you found.</string>
    <string name="report">Report</string>
    <string name="not_paired_yet">You have not paired a radio yet.</string>
    <string name="change_radio">Change radio</string>
    <string name="pairing_completed">Pairing completed, starting service</string>
    <string name="pairing_failed_try_again">Pairing failed, please select again</string>
    <string name="location_disabled">Location access is turned off, can not provide position to mesh.</string>
    <string name="share">Share</string>
    <string name="disconnected">Disconnected</string>
    <string name="device_sleeping">Device sleeping</string>
    <string name="connected_count">Connected: %1$s of %2$s online</string>
    <string name="update_firmware">Update Firmware</string>
    <string name="ip_address">IP Address:</string>
    <string name="connected">Connected to radio</string>
    <string name="connected_to">Connected to radio (%s)</string>
    <string name="not_connected">Not connected</string>
    <string name="connected_sleeping">Connected to radio, but it is sleeping</string>
    <string name="update_to">Update to %s</string>
    <string name="app_too_old">Application update required</string>
    <string name="must_update">You must update this application on the app store (or Github). It is too old to talk to this radio firmware.  Please read our <a href="https://meshtastic.org/docs/software/android/installation">docs</a> on this topic.</string>
    <string name="none">None (disable)</string>
    <string name="modem_config_turbo">Short Range / Turbo</string>
    <string name="modem_config_short">Short Range / Fast</string>
    <string name="modem_config_medium">Medium Range / Fast</string>
    <string name="modem_config_long">Long Range / Fast</string>
    <string name="modem_config_mod_long">Long Range / Moderate</string>
    <string name="battery_alerts">Battery Alerts</string>
    <string name="battery_alerts_summary">Notify when battery metrics fall below either threshold. You can limit alerts to the connected BT node only and choose separate sounds for BT and mesh alerts. Set a threshold to 0 to disable that trigger.</string>
    <string name="battery_alerts_enable">Enable low battery notifications</string>
    <string name="battery_alert_scope">Scope</string>
    <string name="battery_alert_bt_sound">Connected BT node sound</string>
    <string name="battery_alert_mesh_sound">Mesh node sound</string>
    <string name="battery_alert_choose_sound">Choose sound</string>
    <string name="battery_alert_use_default_sound">Use default</string>
    <string name="battery_alert_percent_threshold">Battery level threshold (%)</string>
    <string name="battery_alert_voltage_threshold">Voltage threshold (V)</string>
</resources>